--- a/index.html
+++ b/index.html
@@ -106,7 +106,15 @@
                 }
         </style>
 
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="/ST_debugger/index.css">
+        <!-- Favicon and manifest -->
+        <!-- Prefer icons folder path to match added icons/ directory -->
+        <link rel="icon" href="/ST_debugger/icons/favicon.ico?v=2" />
+        <link rel="shortcut icon" href="/ST_debugger/icons/favicon.ico" />
+        <link rel="mask-icon" href="/ST_debugger/icons/favicon.ico" color="#0a0a0a" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/ST_debugger/icons/icon-192x192.png" />
+        <link rel="manifest" href="/ST_debugger/manifest.webmanifest" />
+        <meta name="theme-color" content="#0a0a0a">
         <script type="importmap">
 {
   "imports": {
