--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@
   }
 }
 </script>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="%BASE_URL%index.css">
+        <!-- Favicon and manifest -->
+        <!-- Prefer icons folder path to match added icons/ directory -->
+        <link rel="icon" href="/icons/favicon.ico" />
+        <link rel="shortcut icon" href="/icons/favicon.ico" />
+        <link rel="mask-icon" href="/icons/favicon.ico" color="#0a0a0a" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
+        <link rel="manifest" href="/manifest.webmanifest" />
+        <meta name="theme-color" content="#0a0a0a">
 </head>
 
 <body class="dark"> <!-- Default to dark mode class, handled by React later -->
