feat: 更新资源路径，支持相对路径以提高可移植性

--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
         <link rel="stylesheet" href="%BASE_URL%index.css">
         <!-- Favicon and manifest -->
         <!-- Prefer icons folder path to match added icons/ directory -->
-        <link rel="icon" href="/icons/favicon.ico" />
-        <link rel="shortcut icon" href="/icons/favicon.ico" />
-        <link rel="mask-icon" href="/icons/favicon.ico" color="#0a0a0a" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
-        <link rel="manifest" href="/manifest.webmanifest" />
+        <link rel="icon" href="%BASE_URL%icons/favicon.ico" />
+        <link rel="shortcut icon" href="%BASE_URL%icons/favicon.ico" />
+        <link rel="mask-icon" href="%BASE_URL%icons/favicon.ico" color="#0a0a0a" />
+        <link rel="apple-touch-icon" sizes="180x180" href="%BASE_URL%icons/icon-192x192.png" />
+        <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
         <meta name="theme-color" content="#0a0a0a">
 </head>
 
 <body class="dark"> <!-- Default to dark mode class, handled by React later -->
         <div id="root"></div>
-        <script type="module" src="/index.tsx"></script>
+        <script type="module" src="%BASE_URL%index.tsx"></script>
 </body>
 
 </html>
